# GeoModel

./: CMakeLists.txt  install.sh  readme.md
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
include/: CurveRender.h  DerivateRender.h  GLProgram.h  MeshRender.h  NormalRender.h  Shader.h  SurfaceRender.h
include/glad/: glad.h
include/tinynurbs/: tinynurbs.h
include/tinynurbs/core/: evaluate.h  modify.h
include/tinynurbs/util/: integral.h
shaders/: blueFragmentShader.fs  fragmentShader.fs  greenFragmentShader.fs  lightvertexShader.vs  redFragmentShader.fs  vertexShader.vs  whiteFragmentShader.fs
src/: CurveRender.cpp  DerivateRender.cpp  GLProgram.cpp  MeshRender.cpp  NormalRender.cpp  Shader.cpp  SurfaceRender.cpp  glad.c  imgui.ini  main.cpp
